Change app name

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Usage Analytics",
-  "name": "Usage Analytics",
+  "short_name": "Usage Analytics Pro",
+  "name": "Usage Analytics Pro",
   "icons": [
     {
       "src": "android-chrome-192x192.png",
