--- a/d2.config.json
+++ b/d2.config.json
@@ -1,9 +1,8 @@
 {
   "type": "app",
-  "name": "usage-analytics",
-  "title": "Usage Analytics",
+  "name": "usage-analytics-pro",
+  "title": "Usage Analytics Pro",
   "coreApp": true,
-  "id": "7a243207-2de8-4620-b3e2-5162106284d4",
   "minDHIS2Version": "2.34",
   "version": "101.0.41"
 }
